# axis-uart

./: .gitignore  pyproject.toml
axis_uart_1.0/: Makefile  test_axis_uart_v1_0.py
axis_uart_1.0/hdl/: axis_uart_v1_0.v  uart_axislave.v  uart_rx.v  uart_tx.v
axis_uart_1.0/misc/: axislave.mmap
